<resources>
    <string name="app_name">Pribit</string>
    <string name="username">안녕 나 응애</string>
    <string name="text_2">1일전</string>
    <string name="hight_u">165cm</string>
    <string name="weight_u">53kg</string>
    <string name="text_3">  팔로우  </string>
    <string name="text_4">지난 월요일에 했던 이벤트 중 가장 괜찮은 상품 뭐야?</string>
    <string name="text_5">지난 월요일에 2023년 S/S 트렌드 알아보기 이벤트 참석했던 팝들아~혹시 어떤 상품이 제일 괜찮았어?\n\n후기 올라오는거 보면 로우라이즈? 그게 제일 반응 좋고 그 테이블이 제일 재밌었다던데 맞아???\n\n올해 로우라이즈가 트렌드라길래 나도 도전해보고 싶은데 말라깽이가아닌 사람들도 잘 어울릴지 너무너무 궁금해ㅜㅜ로우라이즈 테이블에있었던 팝들 있으면 어땠는지 후기 좀 공유해주라~~!
    </string>
    <string name="chipOne">#2023</string>
    <string name="chipTwo">#TODAYISMONDAY</string>
    <string name="chipThree">#TOP</string>
    <string name="chipFour">#POPS!</string>
    <string name="chipFive">#WOW</string>
    <string name="chipSix">#ROW</string>
    <string name="five">5</string>
    <string name="commentOne">어머 제가 있던 테이블이 제일 반응이 좋았나보네요🤭\n우짤래미님도 아시겠지만 저도 일반인 몸매 그 이상도 이하도\n아니잖아요?! 그런 제가 기꺼이 도전해봤는데 생각보다\n괜찮았어요! 오늘 중으로 라이브 리뷰 올라온다고 하니\n꼭 봐주세용~!</string>
    <string name="usernametwo">ㅇㅅㅇ</string>
    <string name="text_6">1일전</string>
    <string name="commentTwo">오 대박! 라이브 리뷰 오늘 올라온대요? 챙겨봐야겠다</string>
    <string name="text_7">댓글을 남겨주세요.</string>
    <string name="text_8">등록</string>
    <string name="text_9">자유톡</string>
</resources>